feat: Implement mappers for Building, Room, Tenant, and User entities
- Added BuildingMapper, RoomMapper, TenantMapper, and UserMapper interfaces for converting entity objects to their respective response DTOs.
- Created implementation classes for each mapper using MapStruct for efficient object mapping.
- Updated BuildingService, RoomService, TenantService, and UserService to utilize the new mappers for response generation.
- Refactored service methods to remove redundant mapping logic, enhancing code maintainability and readability.
- Added unit tests for the new mappers and updated service tests to mock mapper interactions.