@@ -1,12 +1,11 @@
 package com.tpanh.backend.service;
 
 import com.tpanh.backend.dto.UserDTO;
-import com.tpanh.backend.entity.User;
 import com.tpanh.backend.exception.AppException;
 import com.tpanh.backend.exception.ErrorCode;
+import com.tpanh.backend.mapper.UserMapper;
 import com.tpanh.backend.repository.UserRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -18,6 +17,7 @@ import org.springframework.transaction.annotation.Transactional;
 @Slf4j
 public class UserService {
     private final UserRepository userRepository;
+    private final UserMapper userMapper;
 
     public UserDTO getCurrentUser() {
         final var authentication = SecurityContextHolder.getContext().getAuthentication();
@@ -31,12 +31,12 @@ public class UserService {
                         .findById(userId)
                         .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
 
-        return toDTO(user);
+        return userMapper.toDTO(user);
     }
 
     public List<UserDTO> getAllUsers() {
         final var users = userRepository.findAll();
-        return users.stream().map(this::toDTO).collect(Collectors.toList());
+        return users.stream().map(userMapper::toDTO).toList();
     }
 
     @Transactional
@@ -55,16 +55,6 @@ public class UserService {
                 savedUser.getFullName(),
                 savedUser.getId());
 
-        return toDTO(savedUser);
-    }
-
-    private UserDTO toDTO(final User user) {
-        return UserDTO.builder()
-                .id(user.getId())
-                .username(user.getUsername())
-                .fullName(user.getFullName())
-                .role(user.getRoles())
-                .active(user.getActive())
-                .build();
+        return userMapper.toDTO(savedUser);
     }
 }
